[package]
name = "restate-sdk-unison-native"
version = "0.1.0"
edition = "2021"

[lib]
name = "restate_sdk_unison_native"
crate-type = ["cdylib"]

[dependencies]
restate-sdk-shared-core = { path = "../../../restatedev-sdk-shared-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
bytes = "1.10"
